# stm32h5xx-hal-driver

./: CMakeLists.txt
